--- a/stylesheets/popupstyle.css
+++ b/stylesheets/popupstyle.css
@@ -7,13 +7,26 @@ body {
 
 
 .wrapper {
-	margin-left: 80px;
+	height: 30px;
+  width: 100%;
+  margin-bottom: 20px;
+  
 }
 
 .bottom {
 	margin-top: 30px;
 }
 
+.labelsNaming {
+font-size: 17px; 
+font-weight: 700; 
+vertical-align: middle; 
+display:inline-block; 
+margin-bottom: 23px;
+margin-left: 10px;
+font-family: 'Josefin Sans';
+margin-top: 5px;
+}
 /*------Styling Cornea--------*/
 
 #cornea {
@@ -26,6 +39,8 @@ body {
 	padding-top: 0px;
 	margin-bottom: 5px;
 	margin-top: 0px;
+  border: 2px solid darkgrey;
+  border-radius: 20px;
 }
 
 #c {
@@ -59,6 +74,10 @@ body {
 
 /*------------ styling toggle button ---------------*/
 
+.labels {
+  display: inline-block;
+}
+
 input.toggle {
   max-height: 0;
   max-width: 0;
@@ -66,7 +85,7 @@ input.toggle {
 }
 
 input.toggle + label {
-  display: block;
+  display: inline-block;
   position: relative;
   box-shadow: inset 0 0 0px 1px #d5d5d5;
   text-indent: -5000px;
@@ -84,7 +103,7 @@ input.toggle + label:hover {
 input.toggle + label:before {
   content: "";
   position: absolute;
-  display: block;
+  display: inline-block;
   height: 30px;
   width: 30px;
   top: 0;
@@ -99,7 +118,7 @@ input.toggle + label:before {
 input.toggle + label:after {
   content: "";
   position: absolute;
-  display: block;
+  display: inline-block;
   height: 30px;
   width: 30px;
   top: 0;
